--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,6 +43,9 @@
         <% if (locals.loginUser) { %>
             <a href="/users">Users</a>
         <% } %>
+        <% if (locals.loginUser) { %>
+            <a href="/quizzes/contar">Contar</a>
+        <% } %>
     </nav>
 
 
